[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/arrow/Arrow.gd" type="Script" id=1]
[ext_resource path="res://scenes/arrow/arrow-24.png" type="Texture" id=2]

[node name="Arrow" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ray_down" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, 5000 )
layer_mask = 1
type_mask = 13

[node name="ray_up" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, -5000 )
layer_mask = 1
type_mask = 13

[node name="ray_left" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( -5000, 0 )
layer_mask = 1
type_mask = 13

[node name="ray_right" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 5000, 0 )
layer_mask = 1
type_mask = 13

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )


